update repo to 2/14/17 revisions post review; still to fix: exams and bib

--- a/2015-Fall-Class-Conjectures.tex
+++ b/2015-Fall-Class-Conjectures.tex
@@ -5,6 +5,7 @@
 \newtheorem{question}[conjecture]{Question}
 \newtheorem{task}[conjecture]{Task}
 
+\renewcommand\theconjecture{\Alph{conjecture}}
 
 \begin{document}
 
