--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -18,8 +18,8 @@
 \newtheorem*{unthm}{Theorem}
 %
 %%%%%%%%%%%%%%%%%%%%% Annotation Environment Switch%%%%%%%%%%%%
-%\StudentVersion
-\InstructorVersion
+\StudentVersion
+%\InstructorVersion
 %%%%%%%%%%%%%%%%%%%%% Annotation Environment Switch%%%%%%%%%%%%
 %
 
@@ -65,7 +65,7 @@ The choice of Euclid as a text serves these goals, too. \emph{The Elements} has 
 
 Rather than worry over this set of deficiencies in \emph{The Elements} and in these notes, I take the view that each such difficulty is a teaching opportunity. Students will notice gaps in arguments, trouble with definitions, possible theorems that they need but are not stated as official problems, and confusing statements. Each instance creates a need for a fix. I simply ask the students to take up the responsibility of sorting out how they think things should be, and make that part of their work. Since the students find the trouble spots, they feel like they own the mathematics when they go about setting things right.
 
-This makes up an important part of the course that I think of as ``the hidden task sequence.'' Each time a trouble comes up, I challenge the students to come up with a conjecture or question and formulate it as carefully as they can. We then add that to the list of tasks to work on. A typical semester has between fifteen and twenty-five class-made questions and conjectures. I keep these in a separate list (posted on the class web site), labeled with capital roman letters. Only once have I had to go beyond Z to AA and BB. I have included one semester's list of class-made tasks in the appendices.
+This makes up an important part of the course that I think of as ``the hidden task sequence.'' Each time a trouble comes up, I challenge the students to come up with a conjecture or question and formulate it as carefully as they can. We then add that to the list of tasks to work on. A typical semester has between fifteen and twenty-five class-made questions and conjectures. I keep these in a separate list (posted on the class web site), labeled with capital roman letters. Only twice have I had to go beyond Z to AA, AB, etc. I have included one semester's list of class-made tasks in the appendices.
 
 Another benefit of incorporating the use of student-made conjectures is that it normalizes the ordinary and common failures to mathematical work. If a student errs by making an extra hypothesis, just rephrase the theorem, and add a task to the sequence of the form ``Question X: Is Conjecture x.y still true in general?'' or something similar that seems appropriate. This happens often in the beginning of my courses, and students soon learn that ``partial progress is progress'' and that both asking good questions, and making interesting mistakes are valued.
 
@@ -75,7 +75,7 @@ The guiding principle of the course is to mentor the students through the proces
 
 This set of tasks owes a great deal to the work of others. These are the debts that I can recall, though there are probably many others collected over the last decade.
 My introduction to inquiry-based learning, and specifically the Moore Method, was in a workshop run by G. Edgar Parker. That workshop was originally designed by Stan Yoshinobu, who I met later. I am heavily indebted to Timothy McNicholl for his paper \emph{The Extreme Moore Method} \cite{mcnicholl}, which I read right after that workshop. Later, I read the book \emph{The Moore Method} \cite{cmmp}, and I attended a workshop run by Carol Schumacher and Michael Starbird. Through the Academy of Inquiry-Based Learning I got mentoring from T. Kyle Petersen and Gary Richter. I also learned some things about how to construct a set of tasks by reading the text
-\emph{Number Theory Through Inquiry} \cite{nothy} by David Marshall, E.~W.~Odell and Michael Starbird.
+\emph{Number Theory Through Inquiry} \cite{nothy} by David Marshall, E.~W.~Odell, and Michael Starbird.
 All of these people have influenced my teaching and the construction of this task sequence. I also recognize a debt owed to The Educational Advancement Foundation, which supported travel and participation in those workshops and several conferences.
 
 Finally, this set of notes started by appropriating the exercises at the end of chapter one in Robin Hartshorne's lovely book \emph{Geometry: Euclid and Beyond} \cite{hartshorne}. A reader familiar with that book can probably see it hiding in the bones of this task sequence, though the book simultaneously does rather more (in terms of material) and rather less (in terms of training students to do open-ended inquiry).
@@ -217,7 +217,8 @@ My particular web page is open on the internet, though it is secured by its obsc
 As part of the basic structure of the course, I run a class journal.\footnote{I have written about this elsewhere. \cite{MAANOTES}.}
 A student who completes a task to the satisfaction of the class then is charged with writing up the result for publication. 
 
-I provide the students with a \LaTeX\ template and guidelines for preparing their papers. They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
+I provide the students with a \LaTeX\ template and guidelines for preparing their papers. 
+I also give the students a basic example in the paper by Rouse Ball. (This paper contains a famous fallacy and is an elaborate set-up for Problem 27.) They submit papers to me (as the managing editor) through a dedicated email address. Each paper goes through a review and revision cycle as many times as required to get it into a reasonable shape. At first, I play the role of referee and write up little referee reports for each paper. I play referee for each student's first two papers. Later in the term, I ask the students who have two or more published papers to help out and play referee. Again, I provide the students with guidelines for being a referee. If things are going well, I often turn over the refereeing completely by week ten or eleven. 
 
 The whole process has to be explained to the class two or three times for everyone to get the big picture. I find it helps to explain that this is how professionals do it, too, and why it is important.
 
@@ -470,8 +471,11 @@ But making mistakes is an important part of learning, and I don't want you to be
 Accept them and move on.
 
 \subsection*{More about grades}
+NOTE: This section and the next addressed to the author's students. If you are not the author's student, the details in this section may not apply to you directly. Check with your
+instructor about how these details will work.
+
 The most important thing you can do to achieve a good grade in this course is to get actively involved.\footnote{I have put a significant amount of material on the course web page about this semester's experiment in \emph{Specifications Grading}.}
-Prove things, share you work in presentations and in writing.
+Prove things, share your work in presentations and in writing.
 At the end of the semester, I will assign grades in a holistic way.
 We will have a midterm and a final, but these are just another chance for you to make a good impression.
 
@@ -485,6 +489,7 @@ In the past, students who earn passing grades have solved, presented and publish
 Earning an A requires more, both in quality and quantity.
 
 \subsection*{About Sharing Your Work}
+
 When you have successfully completed a task from our list, you will get a chance to share it with the class.
 The first stage is to present your arguments to the class for evaluation by your peers.
 You should prepare carefully for this, as it is impolite to waste everyone's time with a sloppy and poorly given presentation.
@@ -492,14 +497,12 @@ I advise you to write up your ideas and arguments carefully \emph{before the cla
 Also, try to anticipate some questions that your classmates might ask so that you can handle them.
 
 
-
-
 In the class meeting immediately following your successful presentation, you are required to turn in your work in the form of a paper to be published in our class journal.
 I'm sure you see that mathematical writing is very different from any writing you have been asked to do.
 One of our goals this semester is to get a start on developing a mathematical writing style.
 What should a paper look like?
-I have written a paper that models the proper output and put it on the internet at our course web page. 
-You can use it as a guide for writing your first paper.
+I have typed out a paper (with an old chestnut of an argument) that models the generally accepted style and included it as an appendix.
+You can use this paper as a guide for writing your first paper.
 Also, there is a template file you can use to properly format your work in \LaTeX\ .\footnote{The course website has links to both the example and a template. For this paper version of the notes, I have included the example at the end.}
 
 
@@ -558,7 +561,7 @@ Read Euclid's \emph{Elements} Book I Propositions 1-34.
 Pay particular attention to the triangle congruence theorems in I.4, I.8 and I.26.
 This material is all of your allowed references.\\
 
-Now we take up our mathematical work. Note that we begin here at the same place we started in class on the first day.
+Now we take up our mathematical work. 
 
 \begin{definition}\label{defn:collinear}
 We say that some set of points is \emph{collinear} when there exists a line passing through all of the given points.\footnote{Here is a block of new terms given by definitions.
@@ -648,15 +651,23 @@ This item is very challenging.
 Be careful not to let a weak student spin on it alone for too long, as it can become a trap that destroys their confidence.
 Such a student should be encourage to work on other problems in parallel.
 
-There are two natural arguments students make for this conjecture.
+There are three natural arguments students make for this conjecture.
 The first involves picking out a midpoint from one diagonal and proving that it lies on the other diagonal with the help of I.14.
 This requires some creativity, and it doesn't always happen.
 
-The second is a proof by contradiction that quickly splits up into many cases.
-The second proof seems to be more common for my students, but they need help getting things organized.
-This second proof also requires students to wrangle with the ideas behind ``the same side'' and ``opposite sides'' of a line.
-If this is the route your class elects, don't be surprised if this problem is not solved until midterm time.
+The second uses Euclid's Postulate V, and might appear after the students prove Conjecture 
+\ref{conj:rhombus-is-parallelogram}.
+
+The third is a proof by contradiction that quickly splits up into many cases.
+This argument was more common for my students for a few semesters, but they needed help getting things organized.
+This proof requires students to wrangle with the ideas behind ``the same side'' and ``opposite sides'' of a line.
 Setting up these missing terms from Euclid and proving a few very basic properties takes time and effort. But this kind of work, sorting out technical definitions for visually intuitive terms, is a big part of the work in these notes. This is just one of the concepts that Euclid does not give a satisfactory treatment, and the discomfort students feel about this is a good motivator for the importance of a clear and usable mathematical definition.
+If this is the route your class elects, don't be surprised if this problem is not solved until midterm time.
+If you are uncomfortable waiting so long, you might hint that they are trying to 
+prove that some lines are not parallel, and ask if any of their current tools help them
+show such a thing. A student who really looks might realize that Postulate V is helpful.
+
+
 }
 \end{annotation}
 
@@ -683,7 +694,7 @@ Note that the introductory paragraph in the student notes is phrased the way it 
 
 
 We have been talking about rhombi, but how are we sure that they even exist?
-If this seems a silly question, keep in mind that a rhombus is just described by a funny definition that I made up.
+If this seems a silly question, keep in mind that a rhombus is just described by a funny definition that someone made up.
 It is not necessarily clear that this definition means anything at all.
 So, what is to be done about this awkward situation?
 Well, we could try to construct a rhombus.
@@ -891,7 +902,9 @@ Let $R$ be a rectangle. Then $R$ is a parallelogram.
 \begin{annotation}
 {
 \color{blue}
-This item and the next are straightforward items, but they are the first times that students will be required to use results about parallel lines and right angles. A discussion of the parallel postulate might come up.
+This item and the next are straightforward items, but they are the first times that students will be required to use results about parallel lines and right angles. A discussion disambiguating Euclid's Propositions 27 through 29 of the parallel postulate would be helpful. And Conjecture \ref{conj:rectangle-opp-sides} sometimes brings an opportunity to 
+talk about Eulicd's Postulate V. If not here, then that should happen somewhere in this section. Take the opportunity and talk through the unfamiliar language of Postulate V and 
+its role as a constructive statement. Then, if the students have not finished Conjecture \ref{conj:rhombus-diagonals}, you might find a way to drop a hint.
 
 In any case, it is important to get the students to focus on using the definition as written, not as they vaguely recall.
 }
@@ -942,8 +955,14 @@ If segments $AB$ and $CD$ are congruent, then $ABCD$ is a rectangle.
 \color{blue}
 This is incorrect, but in a sneaky way. As my definition of polygon allows for non-simple figures, it is possible to construct a counter example. Simply reflect half of a rectangle in one of its diagonals. Alternately, construct a non-isosceles right triangle and then reflect the legs in the perpendicular bisector of the hypotenuse.
 
+\begin{figure}[h]
+\centering
+\includegraphics[width=.4\textwidth]{counterexample.png}
+\caption{The sneaky counterexample.}
+\end{figure}
+
 Students often ``prove'' this result as written and get it past the class. When this happens, I try to find a way to make them realize it (without telling them) by asking pointed questions about how the assumptions in this item and the next one are different. 
-It is also possible to address this when Thales' theorem in Chapter \ref{section:triangles} is proved.
+It is also possible to address this when Thales' theorem relating right angles and semicircles is proved in Chapter \ref{section:triangles}.
 }
 \end{annotation}
 
@@ -1007,8 +1026,7 @@ This can be a bit unsettling at first, but the basic idea is like a tee-shirt qu
 Since this might be new to you, let me lead you a bit with the following items.
 
 \begin{problem}\label{prob:Ball}
-Read Professor Ball's argument\footnote{For this paper version of the notes, I have included this example at the end.} and figure out what went wrong.
-Recall that you can find it on the course web site under the "Class Journal" tab.
+If you have not, yet, read Professor Ball's argument in the appendix and figure out what went wrong.
 Pinpoint his error and present it to the class.\footnote{Prof. Ball uses a result he calls the hypotenuse-leg theorem, which states that if two right triangles have two pairs of corresponding sides congruent, and one of the pairs is the hypotenuses, then the triangles are congruent. For now, we grant that this theorem is true, and is not the source of Prof. Ball's error. We'll come back to address this theorem later when we study triangles in detail.}
 \end{problem}
 
@@ -1023,7 +1041,9 @@ Let's pretend that we overheard a tea-time conversation where a famous mathemati
 It's proposition I.4 I'm worried about!"
 
 \begin{problem}\label{prob:fix-I.7}
-Figure out what is wrong with Euclid's Proposition I.7 and fix it.
+What might this person's mysterious objection to the argument for 
+Euclid's Proposition I.7 be? Do you agree?
+If so, can you fix the argument?
 \end{problem}
 
 \begin{annotation}
@@ -1034,17 +1054,19 @@ The trouble with Euclid I.7 is that only one case of many is considered. One can
 \end{annotation}
 
 \begin{problem}\label{prob:fix-I.4}
-Figure out what the problem is with Euclid's Proposition I.4.
+What might be this person's mysterious objection to the argument for 
+Euclid's Proposition I.4 be? Do you agree?
+If so, can you fix the argument?
 \end{problem}
 
 \begin{annotation}
 {
 \color{blue}
-This is the infamous ``Pons Asinorum.'' The trouble here is the use of superposition, and the lack of axiomatic support for that. I always lead a short clarifying discussion here about how this early proposition violates the spirit of the axiomatic method, and how modern writers often include I.4 as a postulate rather than as a theorem. (This applies to Hilbert's system, for example.)
+The trouble here is the use of superposition, and the lack of axiomatic support for that. I always lead a short clarifying discussion here about how this early proposition violates the spirit of the axiomatic method, and how modern writers often include I.4 as a postulate rather than as a theorem. (This applies to Hilbert's system, for example.)
 }
 \end{annotation}
 
-So far, I have strongly hinted that the arguments for Propositions I.1, I.4 and I.7 are each imperfect in some way.
+So far, I have strongly hinted that the arguments for Propositions I.1, I.4 and I.7 have sometimes been judged imperfect in some way.
 Unfortunately, they are not alone.
 
 \begin{problem}[Standing Problem]
@@ -1135,7 +1157,7 @@ This is the one opportunity to build up an inductive argument, if you are so inc
 {
 \color{blue}
 This section begins with some straightforward items. I reserve 
-these for students who have not has as much success. I privately encourage students who are doing well in class to spend their energies on the rather more challenging class-made conjectures from the last section, and I privately encourage those who need a lift to spend a little more time on these tasks. 
+these for students who have not had as much success. I privately encourage students who are doing well in class to spend their energies on the rather more challenging class-made conjectures from the last section, and I privately encourage those who need a lift to spend a little more time on these tasks. 
 }
 \end{annotation}
 
@@ -1675,7 +1697,7 @@ How many such lines are there?
 \begin{annotation}
 {
 \color{blue}
-The student introduction her has a lot to say about how Euclid treats area. This is a big intellectual shift for the students, and the class will certainly slow down as the students try to find firm footing again. The long introduction is something I do in class, too. I find it helps the students immensely to spend five minutes on an orientation session when this section is distributed. I begin by pointing out that we are still using the axiomatic method, but we have a new meaning of ``equality'' for figures. I explain that though Euclid makes the switch without further comment, I have chosen the term ``equal content'' to help separate out the ideas. If appropriate, it might help to point out that this is just a different equivalence relation. Of course, the axioms written down as a guide are really just the familiar common notions recast.
+The student introduction here has a lot to say about how Euclid treats area. This is a big intellectual shift for the students, and the class will certainly slow down as the students try to find firm footing again. The long introduction is something I do in class, too. I find it helps the students immensely to spend five minutes on an orientation session when this section is distributed. I begin by pointing out that we are still using the axiomatic method, but we have a new meaning of ``equality'' for figures. I explain that though Euclid makes the switch without further comment, I have chosen the term ``equal content'' to help separate out the ideas. If appropriate, it might help to point out that this is just a different equivalence relation. Of course, the axioms written down as a guide are really just the familiar common notions recast.
 
 When and if it seems appropriate, I encourage students to come up with a notation for equal content that is different from the traditional equal sign. This smoothes out presentations.
 }
@@ -1784,13 +1806,20 @@ Given a triangle $ABC$ and a segment $DE$, construct a rectangle with equal cont
 Given a rectangle, construct a square of equal content.
 \end{problem}
 
-
+\begin{annotation}
+{
+\color{blue}
+This task allows one to construct square roots, if you have appropriately chosen a
+unit segment. It doesn't hurt to point that out to students, especially if their 
+modern algebra course might discuss what lengths are constructible.
+}
+\end{annotation}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{More Content}
 
-The following are come challenging tasks having to do with the theory of equal content.
+The following are some challenging tasks having to do with the theory of equal content.
 The first two are important to us.
 The rest are opportunities to show off.
 
@@ -1863,7 +1892,7 @@ Let $\Gamma$ be a circle with center $O$. Let $A$ be a point outside the circle,
 \begin{annotation}
 {
 \color{blue}
-This is a version of the straightedge and compass construction of \emph{inversion in a circle}.
+This is a version of the straightedge and compass construction of inversion in a circle.
 }
 \end{annotation}
 
@@ -1874,7 +1903,7 @@ Let $ABC$ be a right triangle with right angle at $A$. Let $AD$ be the altitude 
 \begin{annotation}
 {
 \color{blue}
-This is related to the extraction of a square root. If the figure is constructed so that $BD$ is a unit segment, and $DC$ is some given segment, the segment $AD$ will be the square root of $DC$.
+This is related to the extraction of a square root. If the figure is constructed so that $BD$ is a unit segment, and $DC$ is some given segment, the segment $AD$ will be the square root of $DC$. Connect this idea to Problem \ref{prob:quadrature-of-rectangle}.
 }
 \end{annotation}
 
@@ -1997,19 +2026,22 @@ Once, I had an extra day and cooperative weather, so I took the students outside
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \backmatter
 
-\begin{annotation}
+
 \chapter{Appendices}
 
-Here follow the following resources:
+
 \begin{enumerate}
-\item A sample syllabus from Fall 2013.
 \item The example paper containing Rouse Ball's fallacious argument that all triangles are isosceles.\cite{ball}
+\begin{annotation}
+\item A sample syllabus from Fall 2013.
 \item The list of class conjectures made during Fall 2015, with information identifying students removed.
 \item The concluding handout I give with some references to reading.
 \item The midterm and final examination papers from Fall 2015.
 \item The ``Standards for Assessment'' document I share with students detailing our learning goals.
+\end{annotation}
 \end{enumerate}
 
+\begin{annotation}
 Note that in the exams, the tasks in this set of notes are referred to with a slightly different numbering system, as I use a ``numbered within chapter'' scheme in class, but JIBLM wants items numbered along a single global sequence.
 
 
