last draft of final jiblm version, and associated docs

--- a/hitchman.bib
+++ b/hitchman.bib
@@ -19,7 +19,7 @@
  PUBLISHER = {Green Lion Press, Santa Fe, NM},
       YEAR = {2002},
      PAGES = {xxx+499},
-      ISBN = {1-888009-18-7; 1-888009-19-5},
+      ISBN = {1-888009-18-7},
    MRCLASS = {01A75 (01A20 01A60 51-03)},
   MRNUMBER = {1932864},
 MRREVIEWER = {B. Artmann},
@@ -72,18 +72,14 @@ MRREVIEWER = {Serguey M. Pokas{\cprime}},
 }
 
 @online{GGB, 
-author = {Hohenwarter, M. and Borcherds, M. and Ancsin, G. and Bencze, B. and Blossier, M. and Delobelle, A. and Denizet, C. and \'Eli\'as, J. and 
-
-  Fekete, \'A and  G\'al, L. and Kone\v{c}n\'y, Z. and Kov\'acs, Z. and Lizelfelner, S. and Parisse, B. and Sturr, G.}, 
-
+author = {Hohenwarter, M. and Borcherds, M. and Ancsin, G. and Bencze, B. 
+		and Blossier, M. and Delobelle, A. and Denizet, C. and \'Eli\'as, J. 
+		and Fekete, \'A and  G\'al, L. and Kone\v{c}n\'y, Z. and Kov\'acs, Z. 
+		and Lizelfelner, S. and Parisse, B. and Sturr, G.}, 
 title = {{G}eo{G}ebra 5}, 
-
 note = {\url{http://www.geogebra.org}}, 
-
 year = {2015}, 
-
 month = dec 
-
 }
 
 @report {mcnicholl,
@@ -106,8 +102,16 @@ year = {2006}
   MRNUMBER = {905673},
 }
 
-@unpublished {MAANOTES,
-author = {Hitchman, Theron},
-title = {Running a Class Journal},
-note = {to appear in the MAA Notes Volume Beyond Lecture: Techniques to Improve Student Proof-Writing across the Curriculum}
+@incollection {MAANOTES,
+AUTHOR = {Hitchman, Theron},
+TITLE = {Running a Class Journal},
+EDITOR = {Schwell, R. and Steurer, A. and Vasquez, J.},
+BOOKTITLE = {Beyond Lecture},
+SERIES = {MAA Notes},
+VOLUME = {85},
+NOTE = {Resources and Pedagogical Techniques for Enhancing 
+      		the Teaching of Proof-Writing Across the Curriculum},
+PUBLISHER = {Mathematical Association of America, Washington, DC},
+YEAR = {2016},
+ISBN = {978-0-88385-195-1},
 }
