--- a/hitchman_euclidean_geometry_jiblm.tex
+++ b/hitchman_euclidean_geometry_jiblm.tex
@@ -18,8 +18,8 @@
 \newtheorem*{unthm}{Theorem}
 %
 %%%%%%%%%%%%%%%%%%%%% Annotation Environment Switch%%%%%%%%%%%%
-\StudentVersion
-%\InstructorVersion
+%\StudentVersion
+\InstructorVersion
 %%%%%%%%%%%%%%%%%%%%% Annotation Environment Switch%%%%%%%%%%%%
 %
 
@@ -2046,10 +2046,10 @@ Note that in the exams, the tasks in this set of notes are referred to with a sl
 
 
 
-\includepdf[pages=-]{Syllabus.pdf}
 \end{annotation}
 \includepdf[pages=-]{Ball-Fallacy.pdf}
 \begin{annotation}
+\includepdf[pages=-]{Syllabus.pdf}
 \includepdf[pages=-]{2015-Fall-Class-Conjectures.pdf}
 \includepdf[pages=-]{Conclusion.pdf}
 \includepdf[pages=-]{2015-Fa-EG-MidtermExam.pdf}
