update eg 01,04 and 14 with jiblm corrections

--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -249,7 +249,7 @@ Accept them and move on.
 \subsection*{More about grades}
 The most important thing you can do to achieve a good grade in this course is to get actively involved.
 \marginnote{I have put a significant amount of material on the course web page about this semester's experiment in \emph{Specifications Grading}.}
-Prove things, share you work in presentations and in writing.
+Prove things, share your work in presentations and in writing.
 At the end of the semester, I will assign grades in a holistic way.
 We will have a midterm and a final, but these are just another chance for you to make a good impression.
 
@@ -392,7 +392,7 @@ Conversely, if your argument did use Conjecture \ref{conj:rhombus-diagonals}, fi
 
 
 We have been talking about rhombi, but how are we sure that they even exist?
-If this seems a silly question, keep in mind that a rhombus is just described by a funny definition that I made up.
+If this seems a silly question, keep in mind that a rhombus is just described by a funny definition that someone made up.
 It is not necessarily clear that this definition means anything at all.
 So, what is to be done about this awkward situation?
 Well, we could try to construct a rhombus.
