--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -49,7 +49,7 @@ This can be a bit unsettling at first, but the basic idea is like a tee-shirt qu
 Since this might be new to you, let me lead you a bit with the following items.
 
 \begin{problem}\label{prob:Ball}
-Read Professor Ball's argument and figure out what went wrong.
+If you have not, yet, read Professor Ball's argument and figure out what went wrong.
 Recall that you can find it on the course web site under the "Class Journal" tab.
 Pinpoint his error and present it to the class.
 \marginnote[-20pt]{Prof. Ball uses a result he calls the hypotenuse-leg theorem, which states that if two right triangles have two pairs of corresponding sides congruent, and one of the pairs is the hypotenuses, then the triangles are congruent. For now, we grant that this theorem is true, and is not the source of Prof. Ball's error. We'll come back to address this theorem later when we study triangles in detail.}
@@ -59,14 +59,14 @@ Let's pretend that we overheard a tea-time conversation where a famous mathemati
 It's proposition I.4 I'm worried about!"
 
 \begin{problem}\label{prob:fix-I.7}
-Figure out what is wrong with Euclid's Proposition I.7 and fix it.
+What might be the mysterious objection to Euclid's argument for Proposition I.7? Do you agree? If so, can you fix it?
 \end{problem}
 
 \begin{problem}\label{prob:fix-I.4}
-Figure out what the problem is with Euclid's Proposition I.4.
+What might be the mysterious objection to Euclid's argument for Proposition I.4? Do you agree? If so, can you fix it?
 \end{problem}
 
-So far, I have strongly hinted that the arguments for Propositions I.1, I.4 and I.7 are each imperfect in some way.
+So far, I have strongly hinted that the arguments for Propositions I.1, I.4 and I.7 have sometimes been judged as imperfect in some way.
 Unfortunately, they are not alone.
 
 \begin{problem}[Standing Problem]
