--- a/EG_main14.tex
+++ b/EG_main14.tex
@@ -43,7 +43,7 @@
 \setcounter{section}{14}
 \section{More Content}
 
-The following are come challenging tasks having to do with the theory of equal content.
+The following are some challenging tasks having to do with the theory of equal content.
 The first two are important to us.
 The rest are opportunities to show off.
 
