refresh source tex files for fall 2017

--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -15,7 +15,7 @@
 \usepackage{multicol}
 \usepackage{pdfpages}
 
-%%%% Theorem Evironments
+%%%% Theorem Environments
 \theoremstyle{definition}
 \swapnumbers
 \newtheorem{problem}{Problem}[section]
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2017} 
+\date{Fall 2017} 
 
 \begin{document}
 
