--- a/EG_main19.tex
+++ b/EG_main19.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout Number Two 
+% Euclidean Handout Number Nineteen 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2017}
+\date{Fall 2017}
 
 \begin{document}
 
