--- a/EG_main10.tex
+++ b/EG_main10.tex
@@ -16,7 +16,7 @@
 \usepackage{pdfpages}
 \usepackage{fourier}
 
-%%%% Theorem Evironments
+%%%% Theorem Environments
 \theoremstyle{definition}
 \swapnumbers
 \newtheorem{problem}{Problem}[section]
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Spring 2017}
+\date{Fall 2017}
 
 \begin{document}
 
