--- a/tufte_handout_template.tex
+++ b/tufte_handout_template.tex
@@ -15,7 +15,7 @@
 \usepackage{multicol}
 \usepackage{pdfpages}
 
-%%%% Theorem Evironments
+%%%% Theorem Environments
 \theoremstyle{definition}
 \swapnumbers
 \newtheorem{problem}{Problem}[section]
