update dates for Spring 2018

--- a/EG_main04.tex
+++ b/EG_main04.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2017} 
+\date{Spring 2018} 
 
 \begin{document}
 
@@ -50,7 +50,7 @@ Since this might be new to you, let me lead you a bit with the following items.
 
 \begin{problem}\label{prob:Ball}
 If you have not, yet, read Professor Ball's argument and figure out what went wrong.
-Recall that you can find it on the course web site under the "Class Journal" tab.
+Recall that you can find it in the public course folder under "Instructions for Authors".
 Pinpoint his error and present it to the class.
 \marginnote[-20pt]{Prof. Ball uses a result he calls the hypotenuse-leg theorem, which states that if two right triangles have two pairs of corresponding sides congruent, and one of the pairs is the hypotenuses, then the triangles are congruent. For now, we grant that this theorem is true, and is not the source of Prof. Ball's error. We'll come back to address this theorem later when we study triangles in detail.}
 \end{problem}
