--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,4 +1,4 @@
-% Euclidean Handout 
+%Spring 2018 Euclidean Handout 
 \documentclass{tufte-handout}
 
 %\geometry{showframe}% for debugging purposes -- displays the margins
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Spring 2017}
+\date{Spring 2018}
 
 \begin{document}
 
