--- a/EG_main15.tex
+++ b/EG_main15.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[]{Math 3600}
-\date{Fall 2017}
+\date{Spring 2018}
 
 \begin{document}
 
