--- a/EG_main01.tex
+++ b/EG_main01.tex
@@ -30,7 +30,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Spring 2018}
+\date{Fall 2018}
 
 \begin{document}
 
@@ -204,7 +204,7 @@ The ideal question here starts with the phrase ``Excuse me. I don't understand\d
 \section*{What are we up to?}
 
 It is likely that the way this course is conducted is new to you.
-\marginnote{This course is a particular flavor of Inquiry Based Learning known as a Modified Moore Method. Our principal ``modifications'' from R.L. Moore's method are (1) the use of a textbook as reference, and (2) allowing collaboration. (Also, I generally like my students.)}
+\marginnote{This course is a particular flavor of Inquiry Based Learning known as a Modified Moore Method. Our principal ``modifications'' from R.L. Moore's method are (1) the use of a textbook as reference, and (2) allowing collaboration. (Also, I generally like my students, whoever they may be.)}
 Let me share some perspective about what will happen, and why I've arranged things this way.
 
 %\subsection*{Something about our community and my view of what it is...}
@@ -248,7 +248,7 @@ Accept them and move on.
 
 \subsection*{More about grades}
 The most important thing you can do to achieve a good grade in this course is to get actively involved.
-\marginnote{I have put a significant amount of material on the course web page about this semester's experiment in \emph{Specifications Grading}.}
+\marginnote{Go read the official syllabus carefully. There is more about grades in that document.}
 Prove things, share your work in presentations and in writing.
 At the end of the semester, I will assign grades in a holistic way.
 We will have a midterm and a final, but these are just another chance for you to make a good impression.
