add TEG files for archive

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -31,7 +31,7 @@
 
 \title{Euclidean Geometry:\\An Introduction to Mathematical Work}
 \author[Math 3600]{Math 3600}
-\date{Spring 2018}
+\date{Fall 2018}
 
 \begin{document}
 
